--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/server/node_modules
 /node_modules
 
 # testing
@@ -20,5 +21,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log* 
 
-/server/node_modules
+# server
 /server/.env
