--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "2.0.5",
     "redux": "^4.2.0"
   },
